adição html e outros
adicionei coisas basicas como o booststrap e continuei quase nada no html.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css_code/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
 
     <div id="" class="div_botoes">
-        <li>
-            <ul>
-                
-            </ul>
-        </li>
+        <nav id="menu-hub">
+        <ul>
+            <li><p>ola</p></li>
+            <li>ola2</li>
+        </ul>
+        </nav>
     </div>
 
     <div class="container_main">
 
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
