--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <link rel="stylesheet" href="style.css">
 
-    <div id="" class="div_botão">
+    <div id="" class="div_botão button">
         <nav id="menu-hub">
         <ul>
             <button type="button" class="btn btn-light">Cadastro
@@ -24,7 +24,7 @@
         </ul>
         </nav>
     </div>
-    
+
     <div class="container_main container-max" id="Cadastro">
         <h1>Cadastro de Mídia</h1>
 
@@ -42,6 +42,7 @@
         <img src="">
         <input type="number" class="input" id="tempo" placeholder="Informe o tempo de exibição em segundos">
         
+        <label for="dataInicial">Coloque a Data inicial que irá mostrar a sua Midia</label>
         <input type="date" id="dataInicial">
         <input type="date" id="dataFinal">
     </div>
