--- a/front_end/index.html
+++ b/front_end/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MidiaIndoorClient</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stilo.css">
 </head>
 
 <style>
@@ -18,6 +22,37 @@
     .footer {
         bottom: 0px;
     }
+
+    .ahover {
+        position: relative;
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .ahover:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff;
+        visibility: hidden;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+    }
+
+    .ahover:hover:before {
+        visibility: visible;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+    }
+    .ocult {
+        display: none;
+    }
+    .reappear {
+        display:flex;
+    }
 </style>
 
 <body>
@@ -25,34 +60,38 @@
     <div id="" class="align-baseline">
         <nav id="menu-hub">
             <ul>
-                <button type="button" class="btn">Cadastro</button>
-                <button type="button" class="btn">Listagem</button>
-                <button type="button" class="btn">Mídias</button>
+                <button type="button" id="btn_tela_cadastrar" class="btn ahover">Cadastro</button>
+                <button type="button" id="btn_tela_busca" class="btn ahover">Listagem</button>
+                <button type="button" id="btn_editar" class="btn ahover">Atualizar Midias</button>
             </ul>
         </nav>
     </div>
 
+<!--igor fazer: fazer o label para o Tipo e Status;
+    E tambem fazer algo como uma div que está oculta até o click do botão listagem ocorrer-->
 
-
-    <div class="container text-center row gap-2 border border-black box-shadow border-4 rounded bg-white mx-auto col-4" id="Cadastro">
-        <h1>Cadastro de Mídia</h1>
+    <div class="container text-center row gap-2 border border-black box-shadow border-2 rounded bg-white mx-auto col-4 ocult"
+        id="tela_cadastro">
+        <h1 class="fonte">Cadastro de Mídia</h1>
 
         <div class="row align-items-justify mx-auto">
             <input class="input" type="text" id="nome_da_midia" placeholder="Nome da Midia">
         </div>
 
-        <div class="mx-auto col-4">
+        <div class="mx-auto col-5">
+            <label for="escolha_foto_video">irá ser foto ou video?</label>
             <select id="escolha_foto_video" class="form-select p-1">
                 <option value="1">foto</option>
                 <option value="2">vídeo</option>
             </select>
+            <label for="escolha_ativo_desligado">irá ser ativo ou desligado?</label>
             <select id="escolha_ativo_desligado" class="form-select p-1">
                 <option value="1">ativo</option>
                 <option value="2">desligado</option>
             </select>
         </div>
-        
-        <img src="">
+
+<img src="">
         <input type="number" class="input" id="tempo" placeholder="Informe o tempo de exibição em segundos">
 
         <label for="dataInicial">Data incial</label>
@@ -61,12 +100,12 @@
         <input type="date" id="dataFinal">
 
         <div class="mx-auto">
-            <button class="btn btn-outline-success col-1 ">Cadastrar</button>
+            <button class="btn btn-outline-success col-4 ">Cadastrar</button>
         </div>
     </div>
 
 
-    <footer class="align-bottom footer">arwbvtia</footer>
+    
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
