--- a/midia_indoor_cadastro/front_end/index.html
+++ b/midia_indoor_cadastro/front_end/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 
 <style>
@@ -19,7 +20,7 @@
     }
 
     .fonte {
-        font-family: 'Bodoni Moda', serif;
+        font-family: 'Satisfy', cursive;
     }
 
     .ahover {
@@ -80,7 +81,7 @@
         <input class="input" type="text" id="nome_da_midia" placeholder="Nome da Midia">
 
 
-        <input class="input" type="text" id="url" placeholder="coloque seu url">
+        <input class="input" type="text" id="url" placeholder="Url">
 
         <div class="mx-auto col-5">
             <label for="tipo">Qual estilo para o Midia Indoor</label>
@@ -132,9 +133,11 @@
     id="Tela_atualizar">
     <h1 class="fonte">Atualizar midias</h1>
 
-    <input class="input" type="text" id="nome_editado" placeholder="atualizar midia">
+    <input class="input" type="text" id="id_editado" disabled hidden>
 
-    <input class="input" type="text" id="url_editado" placeholder="coloque seu url">
+    <input class="input" type="text" id="nome_editado" placeholder="Atualizar midia">
+
+    <input class="input" type="text" id="url_editado" placeholder="Url">
 
     <div class="mx-auto col-5">
         <label for="tipo_editado">Qual estilo para o Midia Indoor</label>
