--- a/midia_indoor_cadastro/front_end/cadastro/index.html
+++ b/midia_indoor_cadastro/front_end/cadastro/index.html
@@ -40,6 +40,8 @@
         visibility: hidden;
         -webkit-transform: scaleX(0);
         transform: scaleX(0);
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+        border-radius: 5px;
     }
 
     .ahover:hover:before {
