--- a/midia_indoor_cadastro/front_end/cadastro/index.html
+++ b/midia_indoor_cadastro/front_end/cadastro/index.html
@@ -69,7 +69,8 @@
                 <button type="button" id="btn_tela_cadastrar" class="btn ahover">Cadastro</button>
                 <button type="button" id="btn_tela_busca" class="btn ahover">Listagem</button>
                 <button type="button" id="btn_tela_atualizar" class="btn ahover">Atualizar Midias</button>
-                <a href="http://127.0.0.1:5500/midia_indoor_cadastro/front_end/mostrar_midias/midias.html"><button type="button"  class="btn ahover">Sua Midia</button></a>
+                <a href="http://127.0.0.1:5501/midia_indoor_cadastro/front_end/mostrar_midias/midias.html"><button type="button"  class="btn ahover">Sua Midia</button></a>
+                <a href="http://127.0.0.1:5501/midia_indoor_cadastro/front_end/midia_indoor_login/index.html"><button type="button" class="btn ahover">Login</button></a>
             </ul>
         </nav>
     </div>
