--- a/midia_indoor_cadastro/front_end/midia_indoor_login/index.html
+++ b/midia_indoor_cadastro/front_end/midia_indoor_login/index.html
@@ -35,6 +35,8 @@
         visibility: hidden;
         -webkit-transform: scaleX(0);
         transform: scaleX(0);
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+        border-radius: 5px;
     }
 
     .ahover:hover:before {
@@ -87,7 +89,7 @@
         <input type="text" id="" >
         <a href="/">Esqueci minha senha</a>
         <br>
-        <button class="botão" id="btn_cadastro">Avançar</button>
+        <button class="botão" id="btn_cadastro">Entrar</button>
     </div>
         
 
